--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,12 @@ dependencies:
   logger: ^1.1.0
   uuid: ^3.0.7
   intl: ^0.18.0
+  path_provider: ^2.0.11
 
   # Image Processing
   image_picker: ^0.8.6
   image_cropper: ^3.0.1
+  gallery_saver: ^2.3.2
 
   # Local Storage
   shared_preferences: ^2.0.15
