--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,24 +43,32 @@ dependencies:
   # State Management
   provider: ^6.0.5
 
+  # Firebase
+  firebase_core: ^2.4.0
+  cloud_firestore: ^4.3.0
+  firebase_storage: ^11.0.9
+  firebase_auth: ^4.2.2
+
+  # Annotation
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+
+  # Etc
   logger: ^1.1.0
   uuid: ^3.0.7
   intl: ^0.18.0
-  path_provider: ^2.0.11
 
   # Image Processing
   image_picker: ^0.8.6
   image_cropper: ^3.0.1
   gallery_saver: ^2.3.2
 
+  # Splash
+  flutter_native_splash: ^2.2.16
+
   # Local Storage
+  path_provider: ^2.0.11
   shared_preferences: ^2.0.15
-  firebase_core: ^2.4.0
-  cloud_firestore: ^4.3.0
-  firebase_storage: ^11.0.9
-  firebase_auth: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -89,9 +97,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
