--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   firebase_storage: ^11.0.9
   firebase_auth: ^4.2.2
   firebase_ui_auth: ^1.1.5
+  firebase_messaging: ^14.2.0
+
+  # Notification
+  flutter_local_notifications: ^13.0.0
 
   # Authentication
   google_sign_in: ^5.4.2
