--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^4.2.2
   firebase_ui_auth: ^1.1.5
   firebase_messaging: ^14.2.0
+  firebase_analytics: ^10.0.8
 
   # Notification
   flutter_local_notifications: ^13.0.0
